Fixed overflow scrolling on pre tags

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -443,8 +443,9 @@ body {
     }
 
     div.highlight pre {
-        padding: 1em;
-        border-radius: 1em;
+            overflow-x: auto;
+            padding: 1em;
+            border-radius: 1em;
     }
 
     table {
